# greenucd

./: .gitignore  CNAME  GREEN - Agricultural Technology & Sustainability Club at UC Davis _ GIN.htm  Gemfile  README.md  _config.yml  colab_scraper.py  dashboard.html  index.html  pyproject.toml  research-map-crunchbase.md  research-map-growingil.md
.github/workflows/: deploy.yml
GREEN - Agricultural Technology & Sustainability Club at UC Davis _ GIN_files/: index-CFdn0VHF.css  index-ieHm9Jay.js  photo-1486718448742-163732cd1544.avif
_data/: menu.yml  officers.yml  positions.yml
_includes/: navbar.html
_layouts/: base.html  bunkhouse_base.html
_pages/: 404.md  calendar.md  index.md  join.md  mailing-lists.md
_pages/about/: officers.md
_pages/get-involved/: getting-more-involved.md
_plugins/: template_tag.rb
css/: bootstrap-slim.css  green.css  mitoc.css
exports/: agtech_ca_2026-03-22.csv  israelagri_companies.json  snc_agrifood_slugs.txt  snc_slugs.txt
fixtures/: growthlist_table.html  thrive_top50.html  usaspending_response.json  wgcit_page1.html  world_agritech.html
js/: nav.js
src/: cli.py  dashboard_template.py  db.py  dedup.py  models.py  taxonomy.py
src/agtech_ca_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/enrichment/: classifier.py  dns_check.py  tag_classifier.py  wayback.py  web_refine.py
src/scrapers/: base.py  browser_base.py  growthlist.py  import_israeli.py  nifa.py  sbir.py  sbir_bulk.py  thrive.py  (+8 more)
tests/: conftest.py  test_db.py  test_dedup.py  test_models.py  test_taxonomy.py
(+4 files in other folders)
