[project]
name = "agtech-ca-scraper"
version = "0.1.0"
description = "Comprehensive database of California agriculture technology companies (2022-2026)"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[project.scripts]
agtech = "src.cli:main"
